--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,12 @@
     "@types/node": "12.12.6",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
+    "bootstrap": "^4.3.1",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-loading": "2.0.3",
+    "react-router-dom": "5.1.2",
+    "react-router-scroll-top": "0.2.1",
     "react-scripts": "3.2.0",
     "typescript": "3.7.2"
   },
@@ -32,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.1.2"
   }
 }
