--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,24 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "24.0.22",
-    "@types/node": "12.12.6",
-    "@types/react": "16.9.11",
-    "@types/react-dom": "16.9.4",
+    "@apollo/react-hooks": "^3.1.3",
+    "apollo-boost": "^0.4.4",
     "bootstrap": "^4.3.1",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
     "react": "16.11.0",
+    "react-apollo": "^3.1.3",
     "react-dom": "16.11.0",
     "react-loading": "2.0.3",
     "react-router-dom": "5.1.2",
     "react-router-scroll-top": "0.2.1",
-    "react-scripts": "3.2.0",
-    "typescript": "3.7.2"
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "apollo:codegen": "apollo client:codegen --localSchemaFile=\"./schema.graphql\" --target=typescript --globalTypesFile=\"./src/__generated__/globalTypes.ts\"",
+    "codegen:generate": "graphql-codegen --config codegen.json"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,6 +40,16 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.2"
+    "@graphql-codegen/cli": "^1.8.3",
+    "@graphql-codegen/schema-ast": "^1.8.3",
+    "@graphql-codegen/typescript": "^1.8.3",
+    "@types/graphql": "^14.5.0",
+    "@types/jest": "24.0.22",
+    "@types/node": "12.12.6",
+    "@types/react": "^16.9.13",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.2",
+    "apollo": "^2.21.1",
+    "typescript": "^3.7.2"
   }
 }
