--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/graphql": "^14.5.0",
+    "@types/luxon": "^1.21.0",
     "@types/node-fetch": "^2.5.4",
     "typescript": "^3.7.2"
   },
@@ -22,5 +23,7 @@
     "graphql": "^14.5.8",
     "graphql-tools": "^4.0.6",
     "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "luxon": "^1.21.2"
   }
 }
