--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.3.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "luxon": "^1.21.2",
     "react": "16.11.0",
     "react-apollo": "^3.1.3",
     "react-dom": "16.11.0",
@@ -45,6 +46,7 @@
     "@graphql-codegen/typescript": "^1.8.3",
     "@types/graphql": "^14.5.0",
     "@types/jest": "24.0.22",
+    "@types/luxon": "^1.21.0",
     "@types/node": "12.12.6",
     "@types/react": "^16.9.13",
     "@types/react-dom": "^16.9.4",
